--- a/chui-app.sample.yaml
+++ b/chui-app.sample.yaml
@@ -1,3 +1,4 @@
 version: 0.1.0
 source: git@github.com:chuistack/chui-infrastructure-digitalocean.git
 type: infrastructure
+name: {{globalAppName}}-infrastructure
