--- a/chui-app.sample.yaml
+++ b/chui-app.sample.yaml
@@ -1,4 +1,6 @@
 version: 0.1.0
 source: git@github.com:chuistack/chui-infrastructure-digitalocean.git
 type: infrastructure
+variant: digitalocean
 name: {{globalAppName}}-infrastructure
+pulumiOrgName: {{pulumiOrgName}}
