--- a/chui-app.sample.yaml
+++ b/chui-app.sample.yaml
@@ -2,5 +2,6 @@ version: 0.1.0
 source: git@github.com:chuistack/chui-infrastructure-digitalocean.git
 type: infrastructure
 variant: digitalocean
-name: {{globalAppName}}-infrastructure
+name: {{application}}
+globalAppName: {{globalAppName}}
 pulumiOrgName: {{pulumiOrgName}}
